# -QC-CQ-

./: README.md  pyproject.toml
notebooks/01-portas_logicas/: portas_logicas.ipynb
notebooks/01-portas_logicas/.ipynb_checkpoints/: Portas Lógicas-checkpoint.ipynb
